<resources>
    <string name="app_name">Insurance</string>
    <string name="age">Age</string>
    <string name="premium">Premium</string>
    <string name="smoker">Smoker</string>
    <string name="yes">Yes</string>
    <string name="calculate">Calculate</string>
    <string name="reset">Reset</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="name">Name</string>
    <string-array name="age_group">
        <item>Less than 17</item>
        <item>17 to 25</item>
        <item>26 to 30</item>
        <item>31 to 40</item>
        <item>45 to 55</item>
        <item>More then 55</item>
    </string-array>
</resources>